--- a/modules/core/styles/core/_mixins.scss
+++ b/modules/core/styles/core/_mixins.scss
@@ -69,7 +69,7 @@
     color: map-get($theme, 'color');
     border-radius: map-get($theme, 'border-radius');
 
-    transition: map-get($theme, 'transition');
+    //transition: map-get($theme, 'transition');
 
     margin: map-get($theme, 'margin');
     padding: map-get($theme, 'padding');
